--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "express-status-monitor": "^1.3.4",
+    "http-proxy-middleware": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0",
